test/tests/operators/load_balance/error_events_input.txt
error: expected void, got events
 --> tests/operators/load_balance/error_events_input.tql:8:3
  |
8 |   from {y: 1}
  |   ^^^^ 
  |
